--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
 <style>
-    .attribution { font-size: 11px; text-align: center; font-size: large; }
+    .attribution { display: inline; text-align: center; font-size: large; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   
